RESOLVED FIXED259066
AX VoiceOver: some content on web pages is not displayed on the braille display.
https://bugs.webkit.org/show_bug.cgi?id=259066
Summary AX VoiceOver: some content on web pages is not displayed on the braille display.
Andres Gonzalez
Reported 2023-07-10 12:19:35 PDT
.
Attachments
Patch (7.94 KB, patch)
2023-07-10 12:46 PDT, Andres Gonzalez
no flags
Patch (7.88 KB, patch)
2023-07-10 18:43 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-07-10 12:19:46 PDT
Andres Gonzalez
Comment 2 2023-07-10 12:23:52 PDT
Andres Gonzalez
Comment 3 2023-07-10 12:46:21 PDT
Andres Gonzalez
Comment 4 2023-07-10 18:43:56 PDT
EWS
Comment 5 2023-07-11 11:40:32 PDT
Committed 265957@main (27b843503fcf): <https://commits.webkit.org/265957@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467019 [details].
Note You need to log in before you can comment on or make changes to this bug.